Added revolving words

--- a/index.html
+++ b/index.html
@@ -14,23 +14,32 @@
       <canvas class="site-bg__canvas"></canvas>
     </div>
 
-    <!-- <div class="container">
-      <div class="title text-center">
-        <a class="link link--yaku" href="#">
+      <div class="title text-right">
+        <div class="link link--yaku" href="#">
           <span>M</span><span>I</span><span>N</span><span>D</span>
           <span>F</span><span>U</span><span>N</span><span>D</span>
           <span class="emphasis-word-red"><span>S</span><span>T</span><span>U</span><span>D</span><span>I</span><span>O</span></span>
-        </a>
+        </div>
       </div>
 
-      <div class="description text-center">
-        <p class="tagline">We <span class="emphasis-word-green design-word">design</span> products</p>
-        <p class="ourselves-you">(<span class="emphasis-word-blue">For ourselves</span> / <span class="emphasis-word-red">For you</span>)</p>
+      <div class="container">
+        <div class="description text-center">
+          <p class="tagline">
+            <span class="we-text">We</span>
+            <span class="emphasis-word-green design-word revolving-word">design</span>
+            <span class="emphasis-word-red build-word revolving-word-build">build</span>
+            <span class="emphasis-word-blue launch-word revolving-word">launch</span>
+            <span class="product-text">products</span>
+          </p>
+        </div>
       </div>
-    </div> -->
 
+      <div class="footer">
+        <p class="ourselves-you">(<a class="emphasis-word-blue">For ourselves</a> / <a class="emphasis-word-green">For you</a>)</p>
+      </div>
 
     <script src="assets/js/vendor/jquery-2.1.4.min.js"></script>
+    <script src='assets/js/rotatingwords.js'></script>
     <script src='assets/js/vendor/bootstrap.min.js'></script>
     <script src='assets/js/vendor/plugin.js'></script>
     <script src='assets/js/variable.js'></script>
