--- a/index.html
+++ b/index.html
@@ -3,40 +3,95 @@
   <head>
     <meta charset="utf-8">
     <title>Mind Fund Studio</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/menu.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/component.css" />
     <link rel="stylesheet" href="assets/css/main.css" media="screen" title="no title" charset="utf-8">
     <link rel='stylesheet' href='assets/css/bootstrap.min.css'>
     <link rel='stylesheet' href='assets/css/theme_black_red.css' id="theme">
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,300' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <!-- BACKGROUND -->
-    <div class="site-bg">
-      <canvas class="site-bg__canvas"></canvas>
-    </div>
-
-      <div class="title text-right">
-        <div class="link link--yaku" href="#">
-          <span>M</span><span>I</span><span>N</span><span>D</span>
-          <span>F</span><span>U</span><span>N</span><span>D</span>
-          <span class="emphasis-word-red"><span>S</span><span>T</span><span>U</span><span>D</span><span>I</span><span>O</span></span>
-        </div>
-      </div>
-
+    <!-- <div id="perspective" class="perspective effect-laydown">
       <div class="container">
-        <div class="description text-center">
-          <p class="tagline">
-            <span class="we-text">We</span>
-            <span class="emphasis-word-green design-word revolving-word">design</span>
-            <span class="emphasis-word-red build-word revolving-word-build">build</span>
-            <span class="emphasis-word-blue launch-word revolving-word">launch</span>
-            <span class="product-text">products</span>
-          </p>
-        </div>
+				<div class="wrapper"> -->
+
+      <!-- BACKGROUND -->
+      <div class="site-bg">
+        <canvas class="site-bg__canvas"></canvas>
       </div>
 
-      <div class="footer">
-        <p class="ourselves-you">(<a class="emphasis-word-blue">For ourselves</a> / <a class="emphasis-word-green">For you</a>)</p>
+        <div class="title text-right">
+          <div class="link link--yaku" href="#">
+            <span>M</span><span>I</span><span>N</span><span>D</span>
+            <span>F</span><span>U</span><span>N</span><span>D</span>
+            <span class="emphasis-word-red"><span>S</span><span>T</span><span>U</span><span>D</span><span>I</span><span>O</span></span>
+          </div>
+        </div>
+
+        <div class="container">
+          <div class="description text-center">
+
+            <p class="tagline-design">
+              We <span class="emphasis-word-green">design</span> products
+            </p>
+            <div class="tagline-circle">
+              <svg class="design-circle" height="200" width="200">
+                <circle cx="100" cy="100" r="80" stroke="#57FF8D" stroke-width="1" fill="none" />
+              </svg>
+            </div>
+            <!-- <div class="tagline-line1">
+              <svg height="200" width="500">
+                <line x1="0" y1="0" x2="150" y2="150" style="stroke:#FFFFFF; stroke-width:1" />
+              </svg>
+            </div> -->
+
+            <div class="row">
+
+              <div class="col-md-6">
+                <p class="tagline-build">
+                  We <span class="emphasis-word-blue">build</span> products
+                </p>
+                <div class="tagline-circle">
+                  <svg class="build-circle" height="200" width="200">
+                    <circle cx="100" cy="100" r="80" stroke="#57FFF7" stroke-width="1" fill="none" />
+                  </svg>
+                </div>
+              </div>
+
+              <div class="col-md-6">
+                <p class="tagline-launch">
+                  We <span class="emphasis-word-red">launch</span> products
+                </p>
+                <div class="tagline-circle">
+                  <svg class="launch-circle" height="200" width="200">
+                    <circle cx="100" cy="100" r="80" stroke="#FF5757" stroke-width="1" fill="none" />
+                  </svg>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="footer">
+          <p class="ourselves-you">(<a class="emphasis-word-blue">For ourselves</a> / <a class="emphasis-word-green">For you</a>)</p>
+          <!-- <button id="showMenu">Show Menu</button> -->
+        </div>
+
+        <!-- <nav class="outer-nav top horizontal">
+				<a href="#" class="icon-home">Home</a>
+				<a href="#" class="icon-news">News</a>
+				<a href="#" class="icon-image">Images</a>
+				<a href="#" class="icon-upload">Uploads</a>
+				<a href="#" class="icon-star">Favorites</a>
+				<a href="#" class="icon-mail">Messages</a>
+				<a href="#" class="icon-lock">Security</a>
+			  </nav> -->
+
+      <!-- </div>
       </div>
+      </div> -->
 
     <script src="assets/js/vendor/jquery-2.1.4.min.js"></script>
     <script src='assets/js/rotatingwords.js'></script>
@@ -44,5 +99,7 @@
     <script src='assets/js/vendor/plugin.js'></script>
     <script src='assets/js/variable.js'></script>
     <script src='assets/js/main.js'></script>
+    <script src="js/classie.js"></script>
+    <script src="js/menu.js"></script>
   </body>
 </html>
