Functioning site with hidden nav

--- a/index.html
+++ b/index.html
@@ -3,19 +3,41 @@
   <head>
     <meta charset="utf-8">
     <title>Mind Fund Studio</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/menu.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/demo.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/component.css" />
     <link rel="stylesheet" href="assets/css/main.css" media="screen" title="no title" charset="utf-8">
     <link rel='stylesheet' href='assets/css/bootstrap.min.css'>
     <link rel='stylesheet' href='assets/css/theme_black_red.css' id="theme">
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,300' rel='stylesheet' type='text/css'>
+
+    <script src="assets/js/nav/modernizr-custom.js"></script>
+
   </head>
   <body>
-    <!-- <div id="perspective" class="perspective effect-laydown">
-      <div class="container">
-				<div class="wrapper"> -->
 
+
+    <!-- navigation -->
+    <!-- <nav class="pages-nav">
+    <div class="pages-nav__item"><a class="link link--page" href="#page-home">Home</a></div>
+    <div class="pages-nav__item"><a class="link link--page" href="#page-docu">Documentation</a></div>
+    <div class="pages-nav__item"><a class="link link--page" href="#page-manuals">Manuals</a></div>
+    <div class="pages-nav__item"><a class="link link--page" href="#page-software">Software</a></div>
+    <div class="pages-nav__item"><a class="link link--page" href="#page-custom">Customization &amp; Settings</a></div>
+    <div class="pages-nav__item"><a class="link link--page" href="#page-training">Training</a></div>
+    <div class="pages-nav__item pages-nav__item--small"><a class="link link--page link--faded" href="#page-buy">Where to buy</a></div>
+    <div class="pages-nav__item pages-nav__item--small"><a class="link link--page link--faded" href="#page-blog">Blog &amp; News</a></div>
+    <div class="pages-nav__item pages-nav__item--small"><a class="link link--page link--faded" href="#page-contact">Contact</a></div>
+    <div class="pages-nav__item pages-nav__item--social">
+      <a class="link link--social link--faded" href="#"><i class="fa fa-twitter"></i><span class="text-hidden">Twitter</span></a>
+      <a class="link link--social link--faded" href="#"><i class="fa fa-linkedin"></i><span class="text-hidden">LinkedIn</span></a>
+      <a class="link link--social link--faded" href="#"><i class="fa fa-facebook"></i><span class="text-hidden">Facebook</span></a>
+      <a class="link link--social link--faded" href="#"><i class="fa fa-youtube-play"></i><span class="text-hidden">YouTube</span></a>
+    </div>
+    </nav> -->
+    <!-- /navigation-->
+
+    <div class="pages-stack">
+      <div class="page" id="page-home">
       <!-- BACKGROUND -->
       <div class="site-bg">
         <canvas class="site-bg__canvas"></canvas>
@@ -76,30 +98,17 @@
 
         <div class="footer">
           <p class="ourselves-you">(<a class="emphasis-word-blue">For ourselves</a> / <a class="emphasis-word-green">For you</a>)</p>
-          <!-- <button id="showMenu">Show Menu</button> -->
         </div>
-
-        <!-- <nav class="outer-nav top horizontal">
-				<a href="#" class="icon-home">Home</a>
-				<a href="#" class="icon-news">News</a>
-				<a href="#" class="icon-image">Images</a>
-				<a href="#" class="icon-upload">Uploads</a>
-				<a href="#" class="icon-star">Favorites</a>
-				<a href="#" class="icon-mail">Messages</a>
-				<a href="#" class="icon-lock">Security</a>
-			  </nav> -->
-
-      <!-- </div>
+        </div>
+        <!-- <button class="menu-button"><span>Menu</span></button> -->
       </div>
-      </div> -->
-
     <script src="assets/js/vendor/jquery-2.1.4.min.js"></script>
     <script src='assets/js/rotatingwords.js'></script>
     <script src='assets/js/vendor/bootstrap.min.js'></script>
     <script src='assets/js/vendor/plugin.js'></script>
     <script src='assets/js/variable.js'></script>
     <script src='assets/js/main.js'></script>
-    <script src="js/classie.js"></script>
-    <script src="js/menu.js"></script>
+    <script src="assets/js/nav/classie.js"></script>
+    <script src="assets/js/nav/main.js"></script>
   </body>
 </html>
