Update to Flailing Whale site

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Mind Fund Studio</title>
+    <title>Flailing Whale</title>
     <link rel="stylesheet" type="text/css" href="assets/css/demo.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/component.css" />
     <link rel="stylesheet" href="assets/css/main.css" media="screen" title="no title" charset="utf-8">
@@ -15,29 +15,6 @@
   </head>
   <body>
 
-
-    <!-- navigation -->
-    <!-- <nav class="pages-nav">
-    <div class="pages-nav__item"><a class="link link--page" href="#page-home">Home</a></div>
-    <div class="pages-nav__item"><a class="link link--page" href="#page-docu">Documentation</a></div>
-    <div class="pages-nav__item"><a class="link link--page" href="#page-manuals">Manuals</a></div>
-    <div class="pages-nav__item"><a class="link link--page" href="#page-software">Software</a></div>
-    <div class="pages-nav__item"><a class="link link--page" href="#page-custom">Customization &amp; Settings</a></div>
-    <div class="pages-nav__item"><a class="link link--page" href="#page-training">Training</a></div>
-    <div class="pages-nav__item pages-nav__item--small"><a class="link link--page link--faded" href="#page-buy">Where to buy</a></div>
-    <div class="pages-nav__item pages-nav__item--small"><a class="link link--page link--faded" href="#page-blog">Blog &amp; News</a></div>
-    <div class="pages-nav__item pages-nav__item--small"><a class="link link--page link--faded" href="#page-contact">Contact</a></div>
-    <div class="pages-nav__item pages-nav__item--social">
-      <a class="link link--social link--faded" href="#"><i class="fa fa-twitter"></i><span class="text-hidden">Twitter</span></a>
-      <a class="link link--social link--faded" href="#"><i class="fa fa-linkedin"></i><span class="text-hidden">LinkedIn</span></a>
-      <a class="link link--social link--faded" href="#"><i class="fa fa-facebook"></i><span class="text-hidden">Facebook</span></a>
-      <a class="link link--social link--faded" href="#"><i class="fa fa-youtube-play"></i><span class="text-hidden">YouTube</span></a>
-    </div>
-    </nav> -->
-    <!-- /navigation-->
-
-    <div class="pages-stack">
-      <div class="page" id="page-home">
       <!-- BACKGROUND -->
       <div class="site-bg">
         <canvas class="site-bg__canvas"></canvas>
@@ -45,9 +22,8 @@
 
         <div class="title text-right">
           <div class="link link--yaku" href="#">
-            <span>M</span><span>I</span><span>N</span><span>D</span>
-            <span>F</span><span>U</span><span>N</span><span>D</span>
-            <span class="emphasis-word-red"><span>S</span><span>T</span><span>U</span><span>D</span><span>I</span><span>O</span></span>
+            <span>F</span><span>L</span><span>A</span><span>I</span><span>L</span><span>I</span><span>N</span><span>G</span>
+            <span class="emphasis-word-red"><span>W</span><span>H</span><span>A</span><span>L</span><span>E</span>
           </div>
         </div>
 
@@ -55,53 +31,17 @@
           <div class="description text-center">
 
             <p class="tagline-design">
-              We <span class="emphasis-word-green">design</span> products
+              <span class="emphasis-word-green">Silly mobile apps </span><span class="emphasis-word-blue">coming soon</span> <span class="emphasis-word-red"></span>
             </p>
-            <div class="tagline-circle">
-              <svg class="design-circle" height="200" width="200">
-                <circle cx="100" cy="100" r="80" stroke="#57FF8D" stroke-width="1" fill="none" />
-              </svg>
-            </div>
-            <!-- <div class="tagline-line1">
-              <svg height="200" width="500">
-                <line x1="0" y1="0" x2="150" y2="150" style="stroke:#FFFFFF; stroke-width:1" />
-              </svg>
-            </div> -->
-
-            <div class="row">
-
-              <div class="col-md-6">
-                <p class="tagline-build">
-                  We <span class="emphasis-word-blue">build</span> products
-                </p>
-                <div class="tagline-circle">
-                  <svg class="build-circle" height="200" width="200">
-                    <circle cx="100" cy="100" r="80" stroke="#57FFF7" stroke-width="1" fill="none" />
-                  </svg>
-                </div>
-              </div>
-
-              <div class="col-md-6">
-                <p class="tagline-launch">
-                  We <span class="emphasis-word-red">launch</span> products
-                </p>
-                <div class="tagline-circle">
-                  <svg class="launch-circle" height="200" width="200">
-                    <circle cx="100" cy="100" r="80" stroke="#FF5757" stroke-width="1" fill="none" />
-                  </svg>
-                </div>
-              </div>
 
             </div>
           </div>
         </div>
 
         <div class="footer">
-          <p class="ourselves-you">(<a class="emphasis-word-blue">For ourselves</a> / <a class="emphasis-word-green">For you</a>)</p>
+          <!-- <p class="ourselves-you">(<a class="emphasis-word-blue">For ourselves</a> / <a class="emphasis-word-green">For you</a>)</p> -->
         </div>
-        </div>
-        <!-- <button class="menu-button"><span>Menu</span></button> -->
-      </div>
+
     <script src="assets/js/vendor/jquery-2.1.4.min.js"></script>
     <script src='assets/js/rotatingwords.js'></script>
     <script src='assets/js/vendor/bootstrap.min.js'></script>
