--- a/index.html
+++ b/index.html
@@ -20,23 +20,35 @@
         <canvas class="site-bg__canvas"></canvas>
       </div>
 
-        <div class="title text-right">
-          <div class="link link--yaku" href="#">
-            <span>F</span><span>L</span><span>A</span><span>I</span><span>L</span><span>I</span><span>N</span><span>G</span>
-            <span class="emphasis-word-red"><span>W</span><span>H</span><span>A</span><span>L</span><span>E</span>
+        <div class="title">
+          <div class="text-left">
+            <div class="link link--yaku" href="#">
+              <span>F</span><span>L</span><span>A</span><span>I</span><span>L</span><span>I</span><span>N</span><span>G</span>
+              <span class="emphasis-word-red"><span>W</span><span>H</span><span>A</span><span>L</span><span>E</span>
+            </div>
+          </div>
+          <div class="text-right">
+            <a href="mailto:flailingwhale@gmail.com?Subject=Blowing%20bubbles%20together" target="_top">
+              <button type="button" class="btn btn-info">Contact</button>
+            </a>
           </div>
         </div>
+
 
         <div class="container">
           <div class="description text-center">
-
             <p class="tagline-design">
-              <span class="emphasis-word-green">Silly mobile apps </span><span class="emphasis-word-blue">coming soon</span> <span class="emphasis-word-red"></span>
+              <span class="emphasis-word-green">Creating silly mobile apps </span><span class="emphasis-word-blue">for no reason whatsoever</span> <span class="emphasis-word-red"></span>
             </p>
+          </div>
 
-            </div>
+          <div class="app-icons">
+            <a href="http://hairforceoneapp.com">
+              <img class="HFO" src="../assets/img/HFO.png" alt="Hair Force One">
+            </a>
           </div>
         </div>
+
 
         <div class="footer">
           <!-- <p class="ourselves-you">(<a class="emphasis-word-blue">For ourselves</a> / <a class="emphasis-word-green">For you</a>)</p> -->
